# VoiceMOS

./: .gitignore
LDNet/: README.md  VoiceMOS_baseline_README.md  dataset.py  inference.py  inference_for_voicemos.py  optimizers.py  run.sh  submit.sh  train.py  utils.py
LDNet/configs/: LDNet-ML_MobileNetV2_FFN_1e-3.yaml  LDNet-ML_MobileNetV3_FFN_1e-3.yaml  LDNet-ML_MobileNetV3_FFN_1e-3_ft.yaml  LDNet-MN_MobileNetV3_RNN_FFN_1e-3_lamb4.yaml  LDNet_MobileNetV3_FFN_1e-3.yaml  LDNet_MobileNetV3_RNN_5e-3.yaml  MBNet.yaml
LDNet/models/: LDNet.py  mobilenetv2.py  mobilenetv3.py
SSL-MOS/: mos_fairseq.py  predict.py  run.sh  run_inference_for_challenge.py
data_train/DATA/: mydata_system.csv
dku/: README.md  dataset.py  inference.py  inference_for_voicemos.py  pack_for_voicemos.sh  run.sh  schedulers.py  submit.sh  train.py
dku/configs/: JSLDNet-ML_MobileNetV3_RNN_1e-3.yaml  SLDNet-ML_MobileNetV3_FFN_1e-3.yaml  SLDNet-ML_MobileNetV3_RNN_1e-3.yaml  SSLDNet-ML_MobileNetV3_RNN_1e-3.yaml
dku/models/: LDNet.py  MBNet.py  ldnet.py  loss.py  modules.py  wav2vec_mos.py
dku/spk_embed/: dataset.py  extract_spk_embed.py  memo.md  model.py
doc/: VoiceMOS Challenge System Description.docx  system_desc.pptx
phase1_main/: 01_get.py  02_gather.py  03_preprocess.py  README
phase1_main/.blizzard/: README
phase1_main/sv56demo/src/: 00_make.sh  config.status  configure  configure.ac  sv-p56.c
test_phase/: README  setup_main.py  setup_ood.py
test_phase/main/: 04_gather_test.py  05_preprocess_test.py  test.scp
test_phase/ood/: 04_gather_test.py  05_preprocess_test.py  (+1 more)
(+6 files in other folders)
